--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página Inicial de Login</title>
     <link rel="stylesheet" href="css/mobile.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <main>
