--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Página Inicial de Login</title>
     <link rel="stylesheet" href="css/mobile.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 <body>
     <main>
@@ -16,7 +18,23 @@
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente, faça seu login para ter acesso as configurações.</p>
-                <form action="login.php" autocomplete="off" method="post"></form>
+                <form action="login.php" method="post">
+                    <div class="campo">
+                        <label for="iemail">
+                            <span class="material-symbols-outlined">mail</span>
+                        </label>
+                        <input type="email" name="email" id="iemail" placeholder="name@seuemail.com" required>
+                    </div>
+
+                    <div class="campo">
+                        <label for="isenha"><span class="material-symbols-outlined">password</span></label>
+                        <input type="password" name="senha" id="isenha" placeholder="sua senha" required minlength="14">
+                    </div>
+                    <div>
+                        <input type="submit" value="Entrar">
+                        <a href="#">Esqueci a senha</a>
+                    </div>
+                </form>
             </div>
         </section>
     </main>
