--- a/index.html
+++ b/index.html
@@ -30,9 +30,13 @@
                         <label for="isenha"><span class="material-symbols-outlined">password</span></label>
                         <input type="password" name="senha" id="isenha" placeholder="sua senha" required minlength="14">
                     </div>
-                    <div>
+            
+                    <div class="botao">
                         <input type="submit" value="Entrar">
-                        <a href="#">Esqueci a senha</a>
+                    </div>
+
+                    <div class="botao">
+                        <a href="#">Esqueceu sua senha?</a>
                     </div>
                 </form>
             </div>
