--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página Inicial de Login</title>
+    <link rel="shortcut icon" href="icon/logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/mobile.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -13,7 +14,6 @@
     <main>
         <section id="login">
             <div id="imagem">
-                
             </div>
             <div id="formulario">
                 <h1>Login</h1>
